# serializer version: 1
# name: test_binary_sensor[complex_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.victron_mqtt_123_evcharger_0_evcharger_connected',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Connected',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': 'victron_mqtt_123_evcharger_0_evcharger_connected',
      'supported_features': 0,
      'translation_key': 'evcharger_connected',
      'unique_id': 'binary_sensor.victron_mqtt_123_evcharger_0_evcharger_connected',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_binary_sensor[simple_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': None,
      'entity_id': 'binary_sensor.ev_charging_station_connected',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Connected',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Connected',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'evcharger_connected',
      'unique_id': 'binary_sensor.victron_mqtt_evcharger_0_evcharger_connected',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_button[complex_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'button',
      'entity_category': None,
      'entity_id': 'button.victron_mqtt_123_system_0_platform_device_reboot',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Device reboot',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': 'victron_mqtt_123_system_0_platform_device_reboot',
      'supported_features': 0,
      'translation_key': 'platform_device_reboot',
      'unique_id': 'button.victron_mqtt_123_system_0_platform_device_reboot',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_button[simple_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'button',
      'entity_category': None,
      'entity_id': 'button.victron_venus_device_reboot',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Device reboot',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Device reboot',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'platform_device_reboot',
      'unique_id': 'button.victron_mqtt_system_0_platform_device_reboot',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_device_tracker[complex_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'device_tracker',
      'entity_category': None,
      'entity_id': 'device_tracker.victron_mqtt_123_gps_0_gps_location',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Location',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': 'victron_mqtt_123_gps_0_gps_location',
      'supported_features': 0,
      'translation_key': 'gps_location',
      'unique_id': 'device_tracker.victron_mqtt_123_gps_0_gps_location',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_device_tracker[simple_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'device_tracker',
      'entity_category': None,
      'entity_id': 'device_tracker.gps_location',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Location',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Location',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'gps_location',
      'unique_id': 'device_tracker.victron_mqtt_gps_0_gps_location',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_number[complex_naming]
  list([
    dict({
      'attributes': ReadOnlyDict({
        'device_class': 'current',
        'friendly_name': 'EV charging station Charge current setpoint',
        'max': 32,
        'min': 0,
        'mode': <NumberMode.AUTO: 'auto'>,
        'step': 1,
        'unit_of_measurement': 'A',
      }),
      'entity_id': 'number.victron_mqtt_123_evcharger_0_evcharger_set_current',
      'state': '16',
    }),
  ])
# ---
# name: test_number[simple_naming]
  list([
    dict({
      'attributes': ReadOnlyDict({
        'device_class': 'current',
        'friendly_name': 'EV charging station Charge current setpoint',
        'max': 32,
        'min': 0,
        'mode': <NumberMode.AUTO: 'auto'>,
        'step': 1,
        'unit_of_measurement': 'A',
      }),
      'entity_id': 'number.ev_charging_station_charge_current_setpoint',
      'state': '16',
    }),
  ])
# ---
# name: test_select[complex_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'manual',
          'auto',
          'scheduled_charge',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.victron_mqtt_123_evcharger_0_evcharger_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Mode',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': 'victron_mqtt_123_evcharger_0_evcharger_mode',
      'supported_features': 0,
      'translation_key': 'evcharger_mode',
      'unique_id': 'select.victron_mqtt_123_evcharger_0_evcharger_mode',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_select[simple_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'manual',
          'auto',
          'scheduled_charge',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.ev_charging_station_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Mode',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Mode',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'evcharger_mode',
      'unique_id': 'select.victron_mqtt_evcharger_0_evcharger_mode',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_select_main_topic[complex_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'charger_only',
          'inverter_only',
          'on',
          'off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.victron_mqtt_123_vebus_289_vebus_inverter_mode',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': 'victron_mqtt_123_vebus_289_vebus_inverter_mode',
      'supported_features': 0,
      'translation_key': 'vebus_inverter_mode',
      'unique_id': 'select.victron_mqtt_123_vebus_289_vebus_inverter_mode',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_select_main_topic[simple_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'charger_only',
          'inverter_only',
          'on',
          'off',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.ve_bus_id_289',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'vebus_inverter_mode',
      'unique_id': 'select.victron_mqtt_vebus_289_vebus_inverter_mode',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_sensor[complex_naming]
  list([
    dict({
      'attributes': ReadOnlyDict({
        'device_class': 'current',
        'friendly_name': 'Battery DC bus current',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'A',
      }),
      'entity_id': 'sensor.victron_mqtt_123_battery_0_battery_current',
      'state': '10.5',
    }),
  ])
# ---
# name: test_sensor[simple_naming]
  list([
    dict({
      'attributes': ReadOnlyDict({
        'device_class': 'current',
        'friendly_name': 'Battery DC bus current',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'A',
      }),
      'entity_id': 'sensor.battery_dc_bus_current',
      'state': '10.5',
    }),
  ])
# ---
# name: test_sensor_complex[complex_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'disabled_sunday',
          'disabled_weekend',
          'disabled_weekdays',
          'disabled_every_day',
          'disabled_saturday',
          'disabled_friday',
          'disabled_thursday',
          'disabled_wednesday',
          'disabled_tuesday',
          'disabled_monday',
          'sunday',
          'monday',
          'tuesday',
          'wednesday',
          'thursday',
          'friday',
          'saturday',
          'every_day',
          'weekdays',
          'weekends',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.victron_mqtt_123_system_0_system_ess_schedule_charge_2_days',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'ESS BatteryLife schedule charge 2 days',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': 'victron_mqtt_123_system_0_system_ess_schedule_charge_2_days',
      'supported_features': 0,
      'translation_key': 'system_ess_schedule_charge_slot_days',
      'unique_id': 'select.victron_mqtt_123_system_0_system_ess_schedule_charge_2_days',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.victron_mqtt_123_system_0_system_ess_schedule_charge_2_enabled',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'ESS BatteryLife schedule charge 2 enabled',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': 'victron_mqtt_123_system_0_system_ess_schedule_charge_2_enabled',
      'supported_features': 0,
      'translation_key': 'system_ess_schedule_charge_slot_enabled',
      'unique_id': 'switch.victron_mqtt_123_system_0_system_ess_schedule_charge_2_enabled',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_sensor_complex[simple_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': dict({
        'options': list([
          'disabled_sunday',
          'disabled_weekend',
          'disabled_weekdays',
          'disabled_every_day',
          'disabled_saturday',
          'disabled_friday',
          'disabled_thursday',
          'disabled_wednesday',
          'disabled_tuesday',
          'disabled_monday',
          'sunday',
          'monday',
          'tuesday',
          'wednesday',
          'thursday',
          'friday',
          'saturday',
          'every_day',
          'weekdays',
          'weekends',
        ]),
      }),
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'select',
      'entity_category': None,
      'entity_id': 'select.victron_venus_ess_batterylife_schedule_charge_2_days',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'ESS BatteryLife schedule charge 2 days',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'ESS BatteryLife schedule charge 2 days',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'system_ess_schedule_charge_slot_days',
      'unique_id': 'select.victron_mqtt_system_0_system_ess_schedule_charge_2_days',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.victron_venus_ess_batterylife_schedule_charge_2_enabled',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'ESS BatteryLife schedule charge 2 enabled',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'ESS BatteryLife schedule charge 2 enabled',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'system_ess_schedule_charge_slot_enabled',
      'unique_id': 'switch.victron_mqtt_system_0_system_ess_schedule_charge_2_enabled',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_sensor_with_baseline[complex_naming]
  list([
    dict({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Victron Venus PV energy',
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': 'kWh',
      }),
      'entity_id': 'sensor.victron_mqtt_123_system_0_system_dc_pv_energy',
      'state': '1000.004',
    }),
    dict({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Victron Venus PV power',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'W',
      }),
      'entity_id': 'sensor.victron_mqtt_123_system_0_system_dc_pv_power',
      'state': '4000.0',
    }),
  ])
# ---
# name: test_sensor_with_baseline[simple_naming]
  list([
    dict({
      'attributes': ReadOnlyDict({
        'device_class': 'energy',
        'friendly_name': 'Victron Venus PV energy',
        'state_class': <SensorStateClass.TOTAL: 'total'>,
        'unit_of_measurement': 'kWh',
      }),
      'entity_id': 'sensor.victron_venus_pv_energy',
      'state': '1000.004',
    }),
    dict({
      'attributes': ReadOnlyDict({
        'device_class': 'power',
        'friendly_name': 'Victron Venus PV power',
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
        'unit_of_measurement': 'W',
      }),
      'entity_id': 'sensor.victron_venus_pv_power',
      'state': '4000.0',
    }),
  ])
# ---
# name: test_switch[complex_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.victron_mqtt_123_generator_0_generator_manual_start',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Manual start',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': 'victron_mqtt_123_generator_0_generator_manual_start',
      'supported_features': 0,
      'translation_key': 'generator_manual_start',
      'unique_id': 'switch.victron_mqtt_123_generator_0_generator_manual_start',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_switch[simple_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'switch',
      'entity_category': None,
      'entity_id': 'switch.generator_manual_start',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'Manual start',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Manual start',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'generator_manual_start',
      'unique_id': 'switch.victron_mqtt_generator_0_generator_manual_start',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_time[complex_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'time',
      'entity_category': None,
      'entity_id': 'time.victron_mqtt_123_system_0_system_ess_schedule_charge_0_start',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'ESS BatteryLife schedule charge 0 start',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': 'victron_mqtt_123_system_0_system_ess_schedule_charge_0_start',
      'supported_features': 0,
      'translation_key': 'system_ess_schedule_charge_slot_start',
      'unique_id': 'time.victron_mqtt_123_system_0_system_ess_schedule_charge_0_start',
      'unit_of_measurement': None,
    }),
  ])
# ---
# name: test_time[simple_naming]
  list([
    EntityRegistryEntrySnapshot({
      'aliases': list([
        None,
      ]),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'config_subentry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'time',
      'entity_category': None,
      'entity_id': 'time.victron_venus_ess_batterylife_schedule_charge_0_start',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'labels': set({
      }),
      'name': None,
      'object_id_base': 'ESS BatteryLife schedule charge 0 start',
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'ESS BatteryLife schedule charge 0 start',
      'platform': 'victron_mqtt',
      'previous_unique_id': None,
      'suggested_object_id': None,
      'supported_features': 0,
      'translation_key': 'system_ess_schedule_charge_slot_start',
      'unique_id': 'time.victron_mqtt_system_0_system_ess_schedule_charge_0_start',
      'unit_of_measurement': None,
    }),
  ])
# ---
